[package]
name = "ansi-escapes"
version = "0.2.0"
authors = ["Linus Unnebäck <linus@folkdatorn.se>"]
edition = "2021"
rust-version = "1.56"

categories = ["command-line-interface", "no-std"]
description = "Ansi escape codes for manipulating the terminal"
homepage = "https://github.com/LinusU/rust-ansi-escapes"
documentation = "https://docs.rs/ansi-escapes"
repository = "https://github.com/LinusU/rust-ansi-escapes"
keywords = ["ansi", "codes", "terminal", "tty", "vt100"]
readme = "readme.md"
license = "MIT"

[package.metadata.release]
allow-branch = ["main"]
pre-release-commit-message = "🚢 {{version}}"
tag-message = "🚢 {{version}}"
